removed dist usage

--- a/templates/pages/assessment/question.html
+++ b/templates/pages/assessment/question.html
@@ -9,7 +9,7 @@
 ] %}
 
 {% block head_extra %}
-<link rel="stylesheet" href="{{ url_for('static', filename='dist/css/assessment.css') if url_for else '/static/dist/css/assessment.css' }}">
+<!-- Assessment styles handled by Bootstrap -->
 {% endblock %}
 
 {% block content %}
