--- a/templates/pages/home/index.html
+++ b/templates/pages/home/index.html
@@ -3,7 +3,7 @@
 {% set hide_breadcrumbs = true %}
 
 {% block head_extra %}
-<link rel="stylesheet" href="{{ url_for('static', filename='dist/css/home.css') if url_for else '/static/dist/css/home.css' }}">
+<!-- Home page styles handled by Bootstrap -->
 <style>
 /* Modern Human-Centric Design - Clean & Minimal */
 body.home-page {
