--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -32,8 +32,6 @@
     
     <!-- Preload critical resources -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style">
-    <link rel="preload" href="{{ url_for('static', filename='dist/css/main.css') }}" as="style">
-    <link rel="preload" href="{{ url_for('static', filename='dist/css/navbar.css') }}" as="style">
     
     <!-- Favicon and app icons -->
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}">
@@ -55,8 +53,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='dist/css/main.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='dist/css/navbar.css') }}" rel="stylesheet">
+    <!-- Note: Using Bootstrap for styling. Custom SCSS files available in src/scss/ if build system is added -->
     
     <!-- Chart.js for visualizations -->
     <!-- Temporarily disabled to fix loading issues -->
@@ -160,8 +157,10 @@
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
     <!-- Custom JavaScript -->
-    <!-- Temporarily disabled to fix loading issues -->
-    <!-- <script src="{{ url_for('static', filename='dist/js/main.js') }}" defer></script> -->
+    <!-- Load utilities first -->
+    <script src="{{ url_for('static', filename='src/js/modules/utils.js') }}" defer></script>
+    <!-- Load main application -->
+    <script src="{{ url_for('static', filename='src/js/main.js') }}" defer></script>
     
     <!-- Page-specific JavaScript -->
     {% block scripts %}{% endblock %}
