--- a/templates/pages/assessment/start.html
+++ b/templates/pages/assessment/start.html
@@ -2,7 +2,7 @@
 {% set page_title = "Start Assessment" %}
 
 {% block head_extra %}
-<link rel="stylesheet" href="{{ url_for('static', filename='dist/css/assessment.css') if url_for else '/static/dist/css/assessment.css' }}">
+<!-- Assessment styles handled by Bootstrap -->
 {% endblock %}
 
 {% block content %}
