Updated database seed data

--- a/templates/pages/assessment/org_information.html
+++ b/templates/pages/assessment/org_information.html
@@ -487,8 +487,8 @@
                                             <div class="stat-label">Sections</div>
                                         </div>
                                         <div class="stat-item">
-                                            <div class="stat-value">~30</div>
-                                            <div class="stat-label">Minutes</div>
+                                            <div class="stat-value">1-2</div>
+                                            <div class="stat-label">Hours</div>
                                         </div>
                                         <div class="stat-item">
                                             <div class="stat-value">100%</div>
